--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,35 +1,102 @@
 html, body {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  padding: 25px;
-  border:25px solid #666;
+  font-family: helvetica, arial, sans-serif;
 }
 
 .movie-list {
+
   padding: 0;
 
   .movie {
 
-    font-family: cursive, monospace, sans-serif;
+    font-family: courier, monospace, sans-serif;
+    font-size: 1.2em;
     list-style-type: none;
     padding: 8px 0;
     border-bottom: 1px dotted #ccc;
 
     .close-btn {
-      font-family: arial, helvetica, sans-serif;
-      color: red;
-      font-weight: bold;
       cursor: pointer;
-      width: 24px;
-      height: 25px;
-      display: inline-block;
-      border-radius: 50%;
-      border: 1px solid red;
+    }
+
+    .movie-name {
+
+    }
+
+    &.crossed-out {
+      .movie-name {
+        text-decoration: line-through;
+        color: #ccc;
+      }
     }
 
   }
 
 }//movies-list
+
+// Page positioning containers
+
+.main-container {
+
+  display: table;
+  height: 90vh;
+
+  .left-col, .right-col {
+    display: table-cell;
+    vertical-align: middle;
+    float: none;
+  }
+
+  .left-col {
+    // background-color: #991100;
+    background-color: black;
+    color: white;
+  }
+
+  .right-col {
+    .content {
+      margin: 0 auto;
+      width: 80%;
+    }
+  }
+
+}//main-container
+
+// Movie Adder Container
+.movie-adder-container {
+
+  .textbox-movie {
+
+    width: 100%;
+    border: none;
+    border-bottom:3px solid #FFCC00;
+    margin-bottom: 15px;
+    font-size: 3em;
+
+    padding-left: 5px;
+    padding: 10px;
+
+    &::placeholder {
+      color: #ccc;
+      font-style: italic;
+    }
+  }//textbox-movie
+
+  .btn-primary {
+    border-radius: 0;
+    border:3px solid #FFCC00;
+    background-color: #991100;
+    color: white;
+    font-size: 2em;
+  }
+
+}//movie-adder-container
+
+.divider {
+  text-align: center;
+  font-size: 5em;
+  color: #FFCC00;
+}
+
+.load-json {
+  cursor: pointer;
+}
